<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:id="@+id/restaurantTitle"
            android:text="@string/main_init_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/restaurant_name_text"
            android:transitionName="@string/title_transition_name"
            android:contentDescription="@string/description_restaurant_name"/>
        <ImageView
            android:layout_width="@dimen/main_image_width"
            android:layout_height="@dimen/main_image_height"
            android:id="@+id/restaurantImage"
            android:src="@drawable/placeholder"
            android:layout_gravity="center_horizontal"
            android:transitionName="@string/image_transition_name"
            android:contentDescription="@string/description_restaurant_image"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/findButton"
            android:text="@string/button_text"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/description_find_restaurant_button"/>
    </LinearLayout>
</ScrollView>
